--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,8 @@ h1 {
 h2 {
 	color: red;
 	font-size: 60px;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 700;
 }
 
 /* ceci est un commentaire */
