--- a/css/styles.css
+++ b/css/styles.css
@@ -53,13 +53,95 @@ div p {
 
 
 
-
+.space {
+	margin-top: 100px;
+}
 
 
 .bordures {
 	border: 2px solid blue;
 	border-radius: 16px;
 }
+
+/*FLEXBOX*/
+
+#conteneur
+{
+	height: 400px;
+
+    display: flex; /*A Appliquer sur le parent !!!*/
+
+
+    /*DIRECTION*/
+    flex-direction: column;
+    flex-direction: column-reverse;
+    flex-direction: row;
+
+
+
+    /*GESTION DE RETOUR A LA LIGNE*/
+
+						/*  Par défaut, les blocs essaient de rester sur la même ligne s'ils n'ont pas la place 
+					    	(ce qui peut provoquer des bugs de design, parfois). 
+					    	Si vous voulez, vous pouvez demander à ce que les blocs aillent à la ligne lorsqu'ils n'ont plus la place, 
+					    	avec flex-wrap  qui peut prendre ces valeurs :
+
+							nowrap : pas de retour à la ligne (par défaut) ;
+							wrap : les éléments vont à la ligne lorsqu'il n'y a plus la place ;
+							wrap-reverse : les éléments vont à la ligne, lorsqu'il n'y a plus la place, en sens inverse.*/
+	flex-wrap: wrap;
+	/*flex-wrap: nowrap;*/
+	/*flex-wrap: wrap-reverse;*/
+
+
+
+	/*ALIGNEMENT*/
+	justify-content: flex-start;
+	/*justify-content: flex-end;*/
+	/*justify-content: center;*/
+	/*justify-content: space-between;*/
+	/*justify-content: space-around;*/
+
+
+
+
+
+	/*ALIGNEMENT SUR L'AXE SECONDAIRE*/
+	align-items: flex-start;
+	/*align-items: flex-end;*/
+	/*align-items: center;*/
+
+
+	/*ALIGNER UN SEUL ELEMENT*/
+	/*Voir elt3*/
+
+
+	/*ORDONNER*/
+	/*Voir elt1 elt2 elt2*/
+}
+
+.element {
+	height: 150px;
+	width: 200px;
+}
+.elt1 {
+	background-color: orange;
+	/*order: 2;*/
+}
+.elt2 {
+	background-color: blue;
+	/*order: 3;*/
+}
+.elt3 {
+	background-color: green;
+
+	/*AALIGNER UN SEUL ELEMENT*/
+	/*align-self: flex-end;*/
+
+	/*order: 1;*/
+}
+
+
 
 /* CSS pour la page responsive */
 
@@ -122,4 +204,4 @@ div p {
 
 
 /*DECOUPAGE MAQUETTE*/
-/*GIT & GITHUB*/
+/*GIT & GITHUB    Google sheets*/
